# bagviz

./: CMakeLists.txt  README.md
archive/: SceneRenderer.cpp  SceneRenderer.hpp  TopicSelector.cpp  TopicSelector.hpp
src/: BagLoader.cpp  BagLoader.hpp  MessagePanel.cpp  MessagePanel.hpp  PlaceholderDisplay.cpp  PlaceholderDisplay.hpp  ViewerWindow.cpp  ViewerWindow.hpp  main.cpp
